--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>World Clock</h1>
 
-    <footer>This project was coded by Rachael Alexander and is <a href="">sourced on GitHub</a></footer>
+    <footer>This project was coded by Rachael Alexander and is <a href="https://github.com/Rachael-91/world-clock" target="_blank">sourced on GitHub</a></footer>
     <script src="Javascript/index.js"></script>
 </body>
 
