--- a/index.html
+++ b/index.html
@@ -7,27 +7,33 @@
     <title>World Clock</title>
 </head>
 <body>
-    <div class="container">
-    <h1>World Clock</h1>
+<div class="container">
+        <h1>World Clock</h1>
 
-    <select name="" id="">
-        <option value="">Select a city...</option>
-        <option value="">Sydney</option>
-        <option value="">London</option>
-        <option value="">Auckland</option>
-    </select>
+        <select name="" id="">
+            <option value="">Select a city...</option>
+            <option value="">Sydney</option>
+            <option value="">London</option>
+            <option value="">Auckland</option>
+        </select>
 
-<div class="city"></div>
-<h2>Los Angeles</h2>
-<div class="date"> October 13th 2024</div>
-<div class="time"> 2:32:15 PM</div>
+    <div class="city">
+        <div>
+            <h2>Los Angeles</h2>
+            <div class="date"> October 13th 2024</div>
+        </div>
+            <div class="time"> 2:32:15 <small>PM</small></div>
+    </div>
 
-<h2>Melbourne</h2>
-<div class="date"> October 13th 2024</div>
-<div class="time"> 2:32:15 PM</div>
+    <div class="city">
+        <div>
+            <h2>Melbourne</h2>
+            <div class="date"> October 13th 2024</div>
+        </div>
+            <div class="time"> 2:32:15 <small>PM</small></div>
+    </div>
 </div>
-
-    <footer>This project was coded by Rachael Alexander and is <a href="https://github.com/Rachael-91/world-clock" target="_blank">sourced on GitHub</a></footer>
+    <footer>This project was coded by <strong>Rachael Alexander</strong> and is <a href="https://github.com/Rachael-91/world-clock" target="_blank">sourced on GitHub</a></footer>
     <script src="Javascript/index.js"></script>
 </body>
 
