--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 <div class="container">
         <h1>World Clock</h1>
 
-        <select name="" id="">
+        <select name="" id="city">
             <option value="">Select a city...</option>
-            <option value="">Sydney</option>
-            <option value="">London</option>
-            <option value="">Auckland</option>
+            <option value="Australia/Sydney">Sydney</option>
+            <option value="Europe/London">London</option>
+            <option value="Pacific/Auckland">Auckland</option>
         </select>
 
-    <div class="city" id="los-angeles">
+   <div id="cities">
+        <div class="city" id="los-angeles">
         <div>
             <h2>Los Angeles</h2>
             <div class="date"></div>
@@ -34,6 +35,7 @@
         </div>
             <div class="time"> 2:32:15 <small>PM</small></div>
     </div>
+</div>
 </div>
     <footer>This project was coded by <strong>Rachael Alexander</strong> and is <a href="https://github.com/Rachael-91/world-clock" target="_blank">sourced on GitHub</a></footer>
     <script src="Javascript/index.js"></script>
