--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <select name="" id="city">
             <option value="">Select a city...</option>
+            <option value="current">My Current Location</option>
             <option value="Australia/Sydney">Sydney</option>
             <option value="Europe/London">London</option>
             <option value="Pacific/Auckland">Auckland</option>
