--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <option value="Australia/Sydney">Sydney</option>
             <option value="Europe/London">London</option>
             <option value="Pacific/Auckland">Auckland</option>
+            <option value="Asia/Tokyo">Tokyo</option>
         </select>
 
    <div id="cities">
